# lps2x-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/BLEsense_USB/: Cargo.toml
examples/BLEsense_USB/src/: main.rs
examples/raspi/: Cargo.toml
examples/raspi/src/: main.rs
src/: config.rs  fifo.rs  interrupt.rs  lib.rs  register.rs  sensor.rs
src/interface/: i2c.rs  mod.rs  spi.rs
