[package]
name = "lps25hb"
version = "0.1.0"
authors = ["Michal Lasak <nebelgrau77@gmail.com>"]
edition = "2018"
categories = ["embedded", "hardware-support", "no-std"]
description = "A platform agnostic driver to interface with LPS25HB pressure sensor module."
documentation = "https://docs.rs/lps25hb"
readme = "README.md"
keywords = ["embedded-hal-driver", "pressure", "sensor", "MEMS", "lps25"]
license = "MIT"
repository = "https://github.com/nebelgrau77/lps25hb-rs"

[dependencies]
embedded-hal  = { version = "0.2" }

[features]
lps22hb = []
lps25hb = []
