[package]
name = "lps2x"
version = "0.0.1"
authors = ["Michal Lasak <nebelgrau77@gmail.com>"]
edition = "2018"
categories = ["embedded", "hardware-support", "no-std"]
description = "A platform agnostic driver to interface with LPS22HB and LPS25HB pressure sensor module."
documentation = "https://docs.rs/lps2x"
readme = "README.md"
keywords = ["embedded-hal-driver", "pressure", "sensor", "MEMS", "lps25"]
license = "MIT"
repository = "https://github.com/nebelgrau77/lps2x-rs"

[dependencies]
embedded-hal  = { version = "0.2" }

[features]
lps22hb = []
lps25hb = []
